<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".GameHome$PlaceholderFragment" android:paddingBottom="10dp">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume_button_name"
            android:id="@+id/resume_button"
            android:textSize="30sp"
            android:layout_below="@+id/textView4" android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_button_name"
            android:id="@+id/new_game_button" android:layout_below="@+id/resume_button"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highscore_button_name"
            android:id="@+id/highscore_button" android:layout_below="@+id/new_game_button"
            android:layout_centerInParent="true"
             android:textSize="35sp"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_audit_button_name"
            android:id="@+id/save_audit_button"
            android:textSize="30sp"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true" />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_title_home"
            android:background="@color/accent_material_light"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:textSize="50sp"
            android:gravity="center" android:textColor="@android:color/white"/>

</RelativeLayout>

