<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="by"
            android:id="@+id/textView5" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_winner" android:layout_below="@+id/textView5" android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp" android:text="@string/winner_here_label" android:textSize="30sp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart_btn_label"
            android:id="@+id/restart_game_button" android:layout_below="@+id/text_view_winner" android:layout_centerHorizontal="true"
            android:layout_marginTop="53dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_menu_btn_label"
            android:id="@+id/back_to_home_button" android:layout_below="@+id/restart_game_button" android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" android:layout_marginLeft="70dp" android:layout_marginRight="70dp"/>
</RelativeLayout>