<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_new_game_label"
            android:id="@+id/start_game_button"
            android:layout_below="@+id/player_two_name"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="69dp" android:gravity="center" android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/player_one_name"
            android:gravity="center"
            android:layout_below="@+id/textView2" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/player_one_label"
            android:id="@+id/textView2"
           android:layout_alignParentTop="true" android:layout_centerInParent="true" android:layout_marginTop="22dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/player_two_label"
              android:id="@+id/textView3"
              android:layout_marginTop="40dp" android:layout_below="@+id/player_one_name"
              android:layout_centerHorizontal="true"/>
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:inputType="textPersonName" android:ems="10" android:id="@+id/player_two_name" android:gravity="center"
              android:layout_below="@+id/textView3" android:layout_alignLeft="@+id/player_one_name"
              android:layout_alignStart="@+id/player_one_name"/>
</RelativeLayout>